k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: applied-ai-agent-service
spec:
  selector:
    app: applied-ai-agent

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
